--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,6 @@
 <h1>Create Your Admin Account</h1>
 
-<%= form_for :user, url: '/users' do |f| %>
-
+<%= form_for @user do |f| %>
   Username: <%= f.text_field :username %>
   Email: <%= f.email_field :email %>
   Password: <%= f.password_field :password %>
