--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
   </head>
 
   <body>
+    <header>
+      <% if current_user %>
+        <%= "Logged in as #{current_user.username}"%>
+        <%= link_to "logout", logout_path %>
+      <% else %>
+        <%= link_to "Log in", login_path %>
+      <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
