--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
         <%= link_to "logout", logout_path %>
       <% else %>
         <%= link_to "Log in", login_path %>
+        <%= link_to "Sign Up", new_user_path %>
       <% end %>
     </header>
     <%= yield %>
