New pitch form functional; add optional true to pitch model

--- a/app/views/pitches/new.html.erb
+++ b/app/views/pitches/new.html.erb
@@ -1,5 +1,9 @@
 <h1>Create a New Pitch.</h1>
 
+<div>
+
+</div>
+
 <%= form_for :pitch, url: '/pitches' do |f| %>
 
     Title: <%= f.text_field :title %>
