add correct routes for login and signup

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,9 @@
 <h1>Top Pitches</h1>
-
 <h2>Pitch Title</h2>
 <ul>
-<% @pitch_order.each do |array| %>
-  <li><%=array[0]%></li>
-<%end%>
+  <% @pitch_order.each do |array| %>
+    <li><%=array[0]%></li>
+    <%end%>
 </ul>
+<!-- <h1>You must be logged in to view this page.</h1> -->
+<!-- <% link_to 'Log in', login_path %> -->
