--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,26 @@
   </head>
 
   <body>
+
     <header>
+
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
       <% if current_user %>
         <%= "Logged in as #{current_user.username}"%>
-        <%= link_to "logout", logout_path %>
+        <span class="icon-bar"><%= link_to "logout", logout_path %></span>
+
       <% else %>
-        <%= link_to "Log in", login_path %>
-        <%= link_to "Sign Up", new_user_path %>
+        <span class="icon-bar"><%= link_to "Log in", login_path %></span>
+        <span class="icon-bar"><%= link_to "Sign Up", new_user_path %></span>
       <% end %>
+
+    </div>
+    </div>
+    </nav>
     </header>
+
     <%= yield %>
   </body>
 </html>
