--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
     <li class="list-group-item"><%=array[0]%></li>
     <%end%>
 </ul>
-<!-- <h1>You must be logged in to view this page.</h1> -->
-<!-- <% link_to 'Log in', login_path %> -->
+
 </div>
+
+<%= link_to "Create a new pitchday", new_pitchday_path %>
