--- a/app/views/pitchdays/new.html.erb
+++ b/app/views/pitchdays/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create a New Pitchday.</h1>
 
-<%= form_for :pitchday, url: '/pitchdays' do |f| %>
+<%= form_for :pitchday, url: '/pitchdays', :html => {:class => 'form-horizontal'} do |f| %>
     Number: <%= f.number_field :size %>
     Cohort: <%= f.text_field :cohort %>
     <%= f.submit "Start Round" %>
